[package]
name = "dht-explorer"
version = "0.1.0"
authors = ["Patrick Dellinger <patrick@pat.de.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
rand = "0.8.0"
base64 = "0.13.0"
hex = "0.4.3"