[package]
name = "dht-explorer"
version = "0.1.0"
authors = ["Patrick Dellinger <patrick@pat.de.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
stderrlog = "0.5.1"

structopt = "0.3.21"
rand = "0.8.0"
base64 = "0.13.0"
hex = "0.4.3"
parking_lot = "0.12.1"
tokio = { version = "1", features = ["full"] }

serde = "1"
serde_derive = "1"
serde_bencoded = "0.3.1"
serde_bytes = "0.11"

num = "0.4"