[package]
name = "dht-explorer"
version = "0.1.0"
authors = ["Patrick Dellinger <patrick@pat.de.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#environment and runtime
log = "0.4.17"
stderrlog = "0.5.1"
structopt = "0.3.21"
simple-error = "0.2"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.56"
async-recursion = "1.0.0"

#boilerplate sucks
typed-builder = "0.10.0"

#utility
rand = "0.8.0"
base64 = "0.13.0"
hex = "0.4.3"
chrono = "0.4"
regex = "1.5.6"

#serde
serde = "1"
serde_derive = "1"
serde_bytes = "0.11"

#serde_bencoded = "0.3.1"
#serde_bencode = "^0.2.3"
bt_bencode = "0.6.1"
